@@ -8,6 +8,7 @@
 
   * default output of XML on JRuby is no longer formatted due to
     inconsistent whitespace handling. #415
+  * (JRuby) making empty NodeSets with null `nodes` member safe to operate on. #443
 
 == 1.5.0 beta3 / 2010/12/02
 
